Я поспал 3 часа и сразу сел за сайт

--- a/Все_для_волейболу.html
+++ b/Все_для_волейболу.html
@@ -30,7 +30,123 @@
         <li><a href="Контакти.html">Контакти</a></li>
     </ul>
 </nav>
-
+<section class="training">
+    <div class="container">
+        <div class="main-img">
+            <img src="images/400_0_1631383456-9225.jpg" alt="">
+        </div>
+        <h2 class="name-of-sec">
+            Найкращий товар для волейболистів
+        </h2>
+    </div>
+</section>
+<section class="item-sec">
+    <div class="container" style="background-color: white">
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/cat_item_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (дуже крутий)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        800 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>
+            © Volley-shop 2010-2022. Усі права захищені
+        </p>
+    </div>
+</footer>
 </body>
 <script src="https://kit.fontawesome.com/9df2c8dd8e.js" crossorigin="anonymous"></script>
 </html>
