--- a/Контакти.html
+++ b/Контакти.html
@@ -30,7 +30,35 @@
         <li><a href="Контакти.html">Контакти</a></li>
     </ul>
 </nav>
-
+<section class="contact_me_sec">
+    <div class="container">
+        <img src="images/contact_me_poster.jpg" alt="" style="width: 100%">
+        <h2 class="name-of-sec">
+            Зв'яжіться з нами
+        </h2>
+        <div class="email">
+            <h2 class="email_h2" align="center">
+                Надішліть нам листа
+            </h2>
+            <form action="" method="post">
+                <label>
+                    <input type="email" placeholder="Enter your email address" class="footer_1_input">
+                </label>
+                <textarea name="Write a message" id="contact_me" cols="30" rows="10" placeholder="Write a message" class="footer_1_input_2"></textarea>
+                <button type="submit" class="footer_1_button">
+                    Надіслати
+                </button>
+            </form>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>
+            © Volley-shop 2010-2022. Усі права захищені
+        </p>
+    </div>
+</footer>
 </body>
 <script src="https://kit.fontawesome.com/9df2c8dd8e.js" crossorigin="anonymous"></script>
 </html>
