--- a/Про_магазин.html
+++ b/Про_магазин.html
@@ -30,7 +30,34 @@
         <li><a href="Контакти.html">Контакти</a></li>
     </ul>
 </nav>
-
+<section class="training">
+    <div class="container">
+        <div class="main-img">
+            <img src="images/maxresdefault.jpg" alt="">
+        </div>
+        <h2 class="name-of-sec">
+            Про компанію
+        </h2>
+        <div class="white-block">
+            <p class="ffkfk">
+                Наше підприємство на ринку товарів для спорту та волейболу з 2004 року.<br>
+                <br>
+                Товари, представлені в нашому магазині є оригінальними, відрізняються високою якістю і призначені як для любителів спорту, так і для спортсменів, що професійно тренуються. Вікових обмежень ці товари не мають.<br>
+                <br>
+                Намагаємося дати Вам максимально повну та професійну консультацію щодо будь-якого представленого тут товару. Індивідуальний підхід до кожного покупця: підбір моделі, розміру та інших варіантів.<br>
+                <br>
+                Працюємо для Вас
+            </p>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>
+            © Volley-shop 2010-2022. Усі права захищені
+        </p>
+    </div>
+</footer>
 </body>
 <script src="https://kit.fontawesome.com/9df2c8dd8e.js" crossorigin="anonymous"></script>
 </html>
