--- a/Пляжний_волейбол.html
+++ b/Пляжний_волейбол.html
@@ -30,7 +30,123 @@
         <li><a href="Контакти.html">Контакти</a></li>
     </ul>
 </nav>
-
+<section class="training">
+    <div class="container">
+        <div class="main-img">
+            <img src="images/af01cf74f34f053335935a81114b07ad08cf3779_720_405_c.jpg" alt="">
+        </div>
+        <h2 class="name-of-sec">
+            Найкращий товар для пляжного волейболу
+        </h2>
+    </div>
+</section>
+<section class="item-sec">
+    <div class="container" style="background-color: white">
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+        <a href="#" style="">
+            <div class="item d-flex">
+                <img src="images/beach_ball.png" alt="">
+                <div class="item-text" style="width: 50%">
+                    <h4 class="info_h4">
+                        Мяч волейбольний (пляжний)
+                    </h4>
+                    <p>
+                        Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис Нудний опис
+                    </p>
+                    <h4 class="info_h4">
+                        700 грн
+                    </h4>
+                </div>
+            </div>
+        </a>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>
+            © Volley-shop 2010-2022. Усі права захищені
+        </p>
+    </div>
+</footer>
 </body>
 <script src="https://kit.fontawesome.com/9df2c8dd8e.js" crossorigin="anonymous"></script>
 </html>
