--- a/Тренування_та_змагання.html
+++ b/Тренування_та_змагання.html
@@ -30,7 +30,50 @@
         <li><a href="Контакти.html">Контакти</a></li>
     </ul>
 </nav>
-
+<section class="training">
+    <div class="container">
+        <div class="main-img">
+            <img src="images/maxresdefault.jpg" alt="">
+        </div>
+        <h2 class="name-of-sec">
+            Тренування та змагання
+        </h2>
+        <div class="white-block">
+            <p class="ffkfk">
+                Наш магазин спонсує локальні змагання, що проходять в Україні в цілому, та конкретно в Харкові
+            </p>
+        </div>
+    </div>
+</section>
+<section class="gallery">
+    <div style="background-color: #FA7A48 ">
+        <h2 class="name-of-sec" align="center">Наші улюблені моменти зі змагань</h2>
+    </div>
+    <div class="container">
+        <div class="photo_line d-flex">
+            <img src="images/1.jpg" alt="" class="photo_img">
+            <img src="images/2.jpg" alt="" class="photo_img">
+            <img src="images/3.jpg" alt="" class="photo_img">
+        </div>
+        <div class="photo_line d-flex">
+            <img src="images/4.jpg" alt="" class="photo_img">
+            <img src="images/5.jpg" alt="" class="photo_img">
+            <img src="images/6.jpg" alt="" class="photo_img">
+        </div>
+        <div class="photo_line d-flex">
+            <img src="images/7.jpg" alt="" class="photo_img">
+            <img src="images/8.jpg" alt="" class="photo_img">
+            <img src="images/9.jpg" alt="" class="photo_img">
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>
+            © Volley-shop 2010-2022. Усі права захищені
+        </p>
+    </div>
+</footer>
 </body>
 <script src="https://kit.fontawesome.com/9df2c8dd8e.js" crossorigin="anonymous"></script>
 </html>
